# secure-check

./: .gitignore  CHANGELOG-1.0.0.md  LICENSE  README.md  index.html  package-lock.json  release.sh  setup-github.sh
cpp-app/: .gitignore  CMakeLists.txt  Dockerfile.linux  README.md  build-all.sh  build.bat  build.sh  package.sh  restore_security.sh  simulate_vulnerabilities.sh
cpp-app/data/: ollama-config.json  vulnerabilities.json
cpp-app/include/: LandingPage.h  MainWindow.h  OllamaClient.h  SecurityChecker.h  SystemChecker.h  VulnerabilityDefinition.h  VulnerabilityManager.h
cpp-app/src/: LandingPage.cpp  MainWindow.cpp  OllamaClient.cpp  SecurityChecker.cpp  SystemChecker.cpp  VulnerabilityManager.cpp  main.cpp
docs/: OLLAMA_INTEGRATION.md
public/docs/: README.md
src/: App.tsx  types.ts
src/components/: LandingPage.tsx  SecurityChecker.tsx
src/data/: vulnerabilities.ts
